[package]
name = "haven"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
authors = ["Heliozoa <daniel.x.martinez@helsinki.fi>"]
license = "AGPL-3.0-or-later"
default-run = "haven"

[dependencies]
anyhow = "1.0.62"
argon2 = "0.4.1"
axum = { version = "0.6.0-rc.1", features = ["headers", "multipart"] }
chrono = { version = "0.4.22", features = ["serde"] }
cookie = "0.16.0"
diesel = { version = "2.0.0", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
elm_rs = { version = "0.2.0", features = ["chrono"] }
futures = "0.3.23"
hyper = "0.14.20"
image = { version = "0.24.3", default-features = false, features = ["jpeg", "png", "jpeg_rayon"] }
mime = "0.3.16"
r2d2 = "0.8.10"
rand = "0.8.5"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
tower = "0.4.13"
tower-cookies = { version = "0.7.0", features = ["private"] }
tower-http = { version = "0.3.4", features = ["auth", "cors", "fs"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
